tests/ui/type-alias-impl-trait/nested-tait-inference2.next.stderr
error[E0282]: type annotations needed
  --> $DIR/nested-tait-inference2.rs:18:13
   |
LL | fn foo() -> impl Foo<FooX> {
   |             ^^^^^^^^^^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
